--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,63 @@
+arabic-reshaper==3.0.0
 asgiref==3.7.2
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-cryptography==42.0.5
-defusedxml==0.8.0rc2
-Django==5.0.3
-django-cors-headers==4.3.1
-django-rest-framework==0.1.0
-django-templated-mail==1.1.1
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
-djoser==2.2.2
-idna==3.6
-oauthlib==3.2.2
-pillow==10.2.0
+asn1crypto==1.5.1
+beautifulsoup4==4.12.2
+certifi==2023.5.7
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.5
+colorama==0.4.6
+cryptography==41.0.2
+cssselect2==0.7.0
+distlib==0.3.7
+dj-database-url==2.0.0
+Django==4.2.3
+django-bootstrap4==23.2
+django-crispy-forms==2.0
+django-easy-pdf3==0.1.4
+django-heroku==0.3.1
+django-phonenumber-field==7.1.0
+django-phonenumbers==1.0.1
+django-widget-tweaks==1.4.12
+filelock==3.12.2
+html5lib==1.1
+idna==3.4
+lxml==4.9.3
+mysql-connector-python==8.2.0
+numpy==1.26.1
+oscrypto==1.3.0
+pandas==2.1.3
+phonenumbers==8.13.16
+Pillow==10.0.0
+platformdirs==3.9.1
+protobuf==4.21.12
+psycopg2==2.9.6
 pycparser==2.21
-PyJWT==2.8.0
-python3-openid==3.2.0
-pytz==2024.1
+pyHanko==0.19.0
+pyhanko-certvalidator==0.23.0
+pypdf==3.12.2
+pypng==0.20220715.0
+pyt==1.0.5
+python-bidi==0.4.2
+python-dateutil==2.8.2
+python-decouple==3.8
+pytz==2023.3
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==3.6.13
 requests==2.31.0
-requests-oauthlib==1.4.0
-social-auth-app-django==5.4.0
-social-auth-core==4.5.3
+six==1.16.0
+soupsieve==2.4.1
 sqlparse==0.4.4
-tzdata==2024.1
-urllib3==2.2.1
+svglib==1.5.1
+tinycss2==1.2.1
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==5.0.1
+uritools==4.0.1
+urllib3==2.0.3
+virtualenv==20.24.0
+webencodings==0.5.1
+whitenoise==6.5.0
+windows-curses==2.3.1
+xhtml2pdf==0.2.11
